<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/setting_fragment_layout">

    <EditText
        android:id="@+id/query_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:layout_margin="15dp"
        android:hint="@string/Search_query_term"
        android:inputType="text" />



    <!--      AREA FOR SELECTING DATES        -->
    <LinearLayout
        android:id="@+id/listview_dates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <include
            android:id="@+id/begin_date_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            layout="@layout/date_selector"/>

        <include
            android:id="@+id/end_date_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            layout="@layout/date_selector"/>

    </LinearLayout>


    <CalendarView
        android:id="@+id/calendar"
        android:textColorPrimary="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true">
    </CalendarView>



    <!--  GRIDVIEW FOR CHECKBOX (arts, travel, sports,...)  -->
    <GridView
        android:id="@+id/gridview_check_box"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="10dp">
    </GridView>








    <!--  LINE SEPARATOR  -->
    <View
        android:id="@+id/line_separator"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_margin="15dp"
        android:background="#c0c0c0"/>

    <!--  SWITCH BUTTON FOR ENABLING NOTIFICATIONS  -->
    <Switch
        android:id="@+id/toggle_enabling_notif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="16sp"
        android:text="@string/Enable_notifications"/>

    <!--  BUTTON SEARCH  -->
    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:text="@string/SEARCH"/>


</LinearLayout>