<resources>
    <string name="app_name">MyNews</string>

    <!-- sheets for tablayout -->
    <string-array name="list_tab">
        <item>"TOP STORIES"</item>
        <item>"MOST POPULAR"</item>
        <item>"TRAVEL"</item>
    </string-array>

    <!-- Menu for toolbar -->
    <string name="MyNews">MyNews</string>
    <string name="Search_articles">Search Articles</string>
    <string name="Notifications">Notifications</string>
    <string name="About">About</string>
    <string name="Help">Help</string>
    <string name="Search_query_term">Search query term</string>
    <string name="Begin_Date">Begin Date</string>
    <string name="End_Date">End Date</string>
    <string name="Enable_notifications">Enable notifications (once per day)</string>
    <string name="SEARCH">SEARCH</string>

    <!-- list of checkboxes for settings -->
    <string-array name="list_checkbox">
        <item>"Arts"</item>
        <item>"Business"</item>
        <item>"Entrepreneurs"</item>
        <item>"Politics"</item>
        <item>"Sports"</item>
        <item>"Travel"</item>
    </string-array>

    <!-- settings for tab travel -->
    <string name="interest_tab">TRAVEL</string>
    <string name="query_interest">travel</string>

    <!-- items for date selection -->
    <string name="begindate">Begin date</string>
    <string name="enddate">End date</string>
    <string name="APIkey">225a8498a05b4b7bb4d085d0c32e4ce8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base_setting">BaseSettingActivity</string>
    <string name="image_news">Image News</string>
    <string name="icon_notif_choosing">icon_notif_choosing</string>
    <string name="icon_for_search_request">icon_for_search_request</string>
    <string name="icon_navigation_drawer">icon_navigation_drawer</string>

</resources>
